@@ -38,8 +38,9 @@ public class FileCryptTest {
     private CommandLine commandLine;
 
     @BeforeEach
-    void init() {
+    void init() throws IOException {
         fileSystem = Jimfs.newFileSystem(Configuration.unix());
+        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
         fileCrypt = new FileCrypt();
         commandLine = new CommandLine(fileCrypt)
                 .setOut(new PrintWriter(NullOutputStream.NULL_OUTPUT_STREAM))
@@ -54,123 +55,138 @@ public class FileCryptTest {
     }
 
     @Test
+    public void testInsecureARC4() throws IOException {
+        assertEquals(ExitCode.INSECURE.getCode(), commandLine.execute("hello.txt", "--algorithm=ARC4"));
+    }
+
+    @Test
     public void testZeroBytePaddingInsecure() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.INSECURE.getCode(), commandLine.execute("--file=hello.txt", "--padding=ZERO_BYTE"));
+        assertEquals(ExitCode.INSECURE.getCode(), commandLine.execute("hello.txt", "--padding=ZERO_BYTE"));
     }
 
     @Test
     public void testInsecureAllowed() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--padding=ZERO_BYTE", "--insecure"));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--padding=ZERO_BYTE", "--insecure"));
     }
 
     @Test
     public void testNoPaddingFail() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.FAILURE.getCode(), commandLine.execute("--file=hello.txt", "--padding=NONE"));
+        assertEquals(ExitCode.FAILURE.getCode(), commandLine.execute("hello.txt", "--padding=NONE"));
     }
 
     @Test
     public void testAesWrongKeySizeFail() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.KEY_ERROR.getCode(), commandLine.execute("--file=hello.txt", "--algorithm=AES", "--key-size=168"));
+        assertEquals(ExitCode.KEY_ERROR.getCode(), commandLine.execute("hello.txt", "--algorithm=AES", "--key-size=168"));
     }
 
     @Test
     public void testEncryptionOk() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt"));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted_key.yaml")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted_meta.yaml")));
-        // System.out.println(Hex.toHexString(Files.readAllBytes(fileSystem.getPath("hello_encrypted"))));
-        // System.out.println(Files.readString(fileSystem.getPath("hello_encrypted_key.yaml")));
-        // System.out.println(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt"));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin")));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin.meta.yaml")));
+        // System.out.println(Hex.toHexString(Files.readAllBytes(fileSystem.getPath("hello.txt.bin"))));
+        // System.out.println(Files.readString(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        // System.out.println(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")));
+    }
+
+    @Test
+    public void testManualOutput() throws IOException {
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "encrypted_hello"));
+        assertTrue(Files.exists(fileSystem.getPath("encrypted_hello")));
+        assertTrue(Files.exists(fileSystem.getPath("encrypted_hello.key.yaml")));
+        assertTrue(Files.exists(fileSystem.getPath("encrypted_hello.meta.yaml")));
     }
 
     @ParameterizedTest
     @EnumSource(Algorithm.class)
     public void testEncryptionAlgorithms(Algorithm algorithm) throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--algorithm", algorithm.toString(), "--insecure"));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted_key.yaml")));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("algorithm: " + algorithm));
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "--file=hello_encrypted"));
-        assertEquals("hello world", Files.readString(fileSystem.getPath("hello_encrypted_decrypted")));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--algorithm", algorithm.toString(), "--insecure"));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin")));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("algorithm: " + algorithm));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "hello.txt.bin"));
+        assertEquals("hello world", Files.readString(fileSystem.getPath("decrypted_hello.txt")));
     }
 
     @ParameterizedTest
     @EnumSource(BlockMode.class)
     public void testEncryptionBlockModes(BlockMode blockMode) throws IOException {
         Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--block-mode", blockMode.toString(), "--insecure"));
-        System.out.println(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted_key.yaml")));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("block mode: " + blockMode));
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "--file=hello_encrypted"));
-        assertEquals("hello world", Files.readString(fileSystem.getPath("hello_encrypted_decrypted")));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--block-mode", blockMode.toString(), "--insecure"));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin")));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("block mode: " + blockMode));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "hello.txt.bin"));
+        assertEquals("hello world", Files.readString(fileSystem.getPath("decrypted_hello.txt")));
     }
 
     @ParameterizedTest
     @EnumSource(Padding.class)
     public void testEncryptionPaddings(Padding padding) throws IOException {
         Files.write(fileSystem.getPath("hello.txt"), new byte[128]);
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--padding", padding.toString(), "--insecure"));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted_key.yaml")));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("padding: " + padding));
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "--file=hello_encrypted"));
-        assertArrayEquals(new byte[128], Files.readAllBytes(fileSystem.getPath("hello_encrypted_decrypted")));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--padding", padding.toString(), "--insecure"));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin")));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("padding: " + padding));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "hello.txt.bin"));
+        assertArrayEquals(new byte[128], Files.readAllBytes(fileSystem.getPath("decrypted_hello.txt")));
     }
 
     @ParameterizedTest
     @EnumSource(PasswordAlgorithm.class)
     public void testPasswordAlgorithm(PasswordAlgorithm passwordAlgorithm) throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--password=123456", "--password-algorithm", passwordAlgorithm.toString()));
-        System.out.println(Hex.toHexString(Files.readAllBytes(fileSystem.getPath("hello_encrypted"))));
-        System.out.println(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")));
-        assertTrue(Files.exists(fileSystem.getPath("hello_encrypted")));
-        assertFalse(Files.exists(fileSystem.getPath("hello_encrypted_key.yaml")));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("password algorithm: " + passwordAlgorithm));
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "--file=hello_encrypted", "--password=123456"));
-        assertEquals("hello world", Files.readString(fileSystem.getPath("hello_encrypted_decrypted")));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute(
+                "hello.txt",
+                "--password=123456",
+                "--password-algorithm", passwordAlgorithm.toString(),
+                "--password-cost=65536"));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin")));
+        assertFalse(Files.exists(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("password algorithm: " + passwordAlgorithm));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "hello.txt.bin", "--password=123456"));
+        assertEquals("hello world", Files.readString(fileSystem.getPath("decrypted_hello.txt")));
+    }
+
+    @Test
+    public void testPasswordCostGeneration() throws IOException {
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--password=123456"));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin")));
+        assertFalse(Files.exists(fileSystem.getPath("hello.txt.bin.key.yaml")));
+        assertTrue(Files.exists(fileSystem.getPath("hello.txt.bin.meta.yaml")));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--decrypt", "hello.txt.bin", "--password=123456"));
+        assertEquals("hello world", Files.readString(fileSystem.getPath("decrypted_hello.txt")));
     }
 
     @Test
     public void testDecryptionOk() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("0026a5d57ce907234d91ddc8a2f8a6a7"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("0026a5d57ce907234d91ddc8a2f8a6a7"));
         assertEquals(ExitCode.OK.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--cipher-key=f17cc514a9d2570924ec680414951fb33051603b1940f06a",
                 "--iv=ad4b3a44f3cad4b4b2657b7cf71fd3f1"));
-        assertEquals("hello world", Files.readString(fileSystem.getPath("hello_encrypted_decrypted")));
+        assertEquals("hello world", Files.readString(fileSystem.getPath("decrypted_hello.txt")));
     }
 
     @Test
     public void testEncryptMacOk() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--verification"));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("verification: "));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--verification"));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("verification: "));
     }
 
     @Test
     public void testEncryptMacAESCMAC() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--verification", "--verification-algorithm=AESCMAC"));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("verification algorithm: AESCMAC"));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--verification", "--verification-algorithm=AESCMAC"));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("verification algorithm: AESCMAC"));
     }
 
     @Test
     public void testDecryptValidMacHMACSHA256() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("d6e9576cb3512d2016fb82f0308da49e"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("d6e9576cb3512d2016fb82f0308da49e"));
         assertEquals(ExitCode.OK.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=abb04ba47918a17a54f831240a72275b",
                 "--cipher-key=b7951dbdb94c35619b91a614b58be07c355a5e5d3cb22b43",
                 "--verification=80cb3bd1e1746b884be36fbd225f4d03a1324ebe0b97ad50082dd7889c653481",
@@ -180,10 +196,10 @@ public class FileCryptTest {
 
     @Test
     public void testDecryptWrongMacKeyHMACSHA256() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("d6e9576cb3512d2016fb82f0308da49e"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("d6e9576cb3512d2016fb82f0308da49e"));
         assertEquals(ExitCode.VERIFICATION_FAILED.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=abb04ba47918a17a54f831240a72275b",
                 "--cipher-key=b7951dbdb94c35619b91a614b58be07c355a5e5d3cb22b43",
                 "--verification=80cb3bd1e1746b884be36fbd225f4d03a1324ebe0b97ad50082dd7889c653481",
@@ -193,10 +209,10 @@ public class FileCryptTest {
 
     @Test
     public void testDecryptMissingMacKeyHMACSHA256() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("d6e9576cb3512d2016fb82f0308da49e"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("d6e9576cb3512d2016fb82f0308da49e"));
         assertEquals(ExitCode.VERIFICATION_FAILED.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=abb04ba47918a17a54f831240a72275b",
                 "--cipher-key=b7951dbdb94c35619b91a614b58be07c355a5e5d3cb22b43",
                 "--verification=80cb3bd1e1746b884be36fbd225f4d03a1324ebe0b97ad50082dd7889c653481",
@@ -205,17 +221,16 @@ public class FileCryptTest {
 
     @Test
     public void testEncryptHashSHA256() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--verification", "--verification-algorithm=SHA256"));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("verification algorithm: SHA256"));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--verification", "--verification-algorithm=SHA256"));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("verification algorithm: SHA256"));
     }
 
     @Test
     public void testDecryptValidHashSHA256() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("62d8ebc735ea27e1b9fd5b7fe3ea3129"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("62d8ebc735ea27e1b9fd5b7fe3ea3129"));
         assertEquals(ExitCode.OK.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=c1b0275ba3a39e55193c22faa20b0d94",
                 "--cipher-key=dfa51c881060e549cff85167c3ad07a0c4bd561af5bace6a273ae11b0e560ed3",
                 "--verification=9c703c23442e841cac723cfe06573cb7d94b4e872a14641d9d862eae6ff7a66b",
@@ -224,10 +239,10 @@ public class FileCryptTest {
 
     @Test
     public void testDecryptWrongHashSHA256() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("62d8ebc735ea27e1b9fd5b7fe3ea3129"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("62d8ebc735ea27e1b9fd5b7fe3ea3129"));
         assertEquals(ExitCode.VERIFICATION_FAILED.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=c1b0275ba3a39e55193c22faa20b0d94",
                 "--cipher-key=dfa51c881060e549cff85167c3ad07a0c4bd561af5bace6a273ae11b0e560ed3",
                 "--verification=0d17a7d00e0459ddea3f0ab6ee42c7b19912d72ffc7566003dc5458532d8a1d6",
@@ -236,17 +251,16 @@ public class FileCryptTest {
 
     @Test
     public void testEncryptSignature() throws IOException {
-        Files.writeString(fileSystem.getPath("hello.txt"), "hello world");
-        assertEquals(ExitCode.OK.getCode(), commandLine.execute("--file=hello.txt", "--signature"));
-        assertTrue(Files.readString(fileSystem.getPath("hello_encrypted_meta.yaml")).contains("signature: "));
+        assertEquals(ExitCode.OK.getCode(), commandLine.execute("hello.txt", "--signature"));
+        assertTrue(Files.readString(fileSystem.getPath("hello.txt.bin.meta.yaml")).contains("signature: "));
     }
 
     @Test
     public void testDecryptSignatureValid() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("10eeca27199fadf58a4efc90e0d70db1"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("10eeca27199fadf58a4efc90e0d70db1"));
         assertEquals(ExitCode.OK.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=9fe490f843e7f5567190fd071e240626",
                 "--cipher-key=d7ab511b3a5d03c2e35bfdb313863223da206892491933a6f04abedf92e1aabd",
                 "--signature=MEUCIQDG+bgVHymZ5JAxvS+VHrKHzKJerg7dTdnp+z8niUCxAAIgazkpbQa4YUdXFN/KWoMwY45X" +
@@ -270,10 +284,10 @@ public class FileCryptTest {
 
     @Test
     public void testDecryptSignatureManipulated() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("ea5c1ad42f7b0e9f30898e05766c27a1"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("ea5c1ad42f7b0e9f30898e05766c27a1"));
         assertEquals(ExitCode.INVALID_SIGNATURE.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=c454f2a2676b6b28e69d1b83ccbae582",
                 "--cipher-key=350982409519fd954e67ef1641820c15c87f6ff36108f98ff6893ec258d62320",
                 "--signature=MEUCIQDG+bgVHymZ5JAxvS+VHrKHzKJerg7dTdnp+z8niUCxAAIgazkpbQa4YUdXFN/KWoMwY45X" +
@@ -297,10 +311,10 @@ public class FileCryptTest {
 
     @Test
     public void testDecryptSignatureInvalid() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("10eeca27199fadf58a4efc90e0d70db1"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("10eeca27199fadf58a4efc90e0d70db1"));
         assertEquals(ExitCode.INVALID_SIGNATURE.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=9fe490f843e7f5567190fd071e240626",
                 "--cipher-key=d7ab511b3a5d03c2e35bfdb313863223da206892491933a6f04abedf92e1aabd",
                 "--signature=MEUCIFpGEWl8AA6PD4bPDMfRJEZqsZxS+2GWLxrJVaUNGgEWAiEA87+s390Kv+ZY4OYMa4/qFPG5" +
@@ -324,10 +338,10 @@ public class FileCryptTest {
 
     @Test
     public void testDecryptSignatureKeyInvalid() throws IOException {
-        Files.write(fileSystem.getPath("hello_encrypted"), Hex.decode("10eeca27199fadf58a4efc90e0d70db1"));
+        Files.write(fileSystem.getPath("hello.txt.bin"), Hex.decode("10eeca27199fadf58a4efc90e0d70db1"));
         assertEquals(ExitCode.INVALID_SIGNATURE.getCode(), commandLine.execute(
                 "--decrypt",
-                "--file=hello_encrypted",
+                "hello.txt.bin",
                 "--iv=9fe490f843e7f5567190fd071e240626",
                 "--cipher-key=d7ab511b3a5d03c2e35bfdb313863223da206892491933a6f04abedf92e1aabd",
                 "--signature=MEUCIQDG+bgVHymZ5JAxvS+VHrKHzKJerg7dTdnp+z8niUCxAAIgazkpbQa4YUdXFN/KWoMwY45X" +
@@ -351,12 +365,6 @@ public class FileCryptTest {
 
     @Test
     public void testEncryptionMissingInput() {
-        assertEquals(ExitCode.NO_SUCH_FILE.getCode(), commandLine.execute("--file=hello.txt"));
-    }
-
-    @Test
-    public void createCipherCorrect() throws NoSuchPaddingException, NoSuchAlgorithmException, NoSuchProviderException {
-        var cipher = fileCrypt.createCipher(new Metadata(Algorithm.AES, BlockMode.CBC, Padding.PKCS7, null));
-        assertEquals("AES/CBC/PKCS7Padding", cipher.getAlgorithm());
+        assertEquals(ExitCode.NO_SUCH_FILE.getCode(), commandLine.execute("hello2.txt"));
     }
 }
